fixed spacing under treehouse button

--- a/css/index.css
+++ b/css/index.css
@@ -403,6 +403,7 @@ header.fullscreen-landing {
   text-align: center;
   width: 150px;
   transition: 200ms ease-out;
+  margin-bottom: 40px;
 }
 .treehouse-link:hover {
   opacity: 1;
