--- a/less/my-work.less
+++ b/less/my-work.less
@@ -83,6 +83,7 @@
   text-align: center;
   width: 150px;
   transition: 200ms ease-out;
+  margin-bottom: 40px;
   &:hover {
     opacity: 1;
     color: #fff;
